#71 #99 add admin endpoints to provide users and lynx data for uat + fix various UI bugs